# Project_Atlas

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  fly.toml  package-lock.json  package.json  railway.json  render.yaml  vercel.json
.github/workflows/: ci.yml  linux-desktop.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: manifest.webmanifest
apps/desktop/src/: App.test.tsx  App.tsx  index.css  main.tsx  supabase-client.ts  tauri-tool-executor.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/context/: AtlasContext.tsx
apps/server/: Dockerfile  README.md  package.json
apps/server/src/: server.js
supabase/migrations/: 20260715000000_atlas_workspace_state.sql
