[package]
name = "atlas-desktop"
version = "1.0.0"
description = "Atlas Desktop Workspace"
authors = ["Project Atlas Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
